--- a/.env.example
+++ b/.env.example
@@ -5,13 +5,13 @@ FEEDGEN_PORT=3000
 FEEDGEN_LISTENHOST="localhost"
 
 # Set to something like db.sqlite to store persistently
-FEEDGEN_SQLITE_LOCATION=":memory:"
+FEEDGEN_SQLITE_LOCATION="db.sqlite"
 
 # Don't change unless you're working in a different environment than the primary Bluesky network
 FEEDGEN_SUBSCRIPTION_ENDPOINT="wss://bsky.social"
 
 # Set this to the hostname that you intend to run the service at
-FEEDGEN_HOSTNAME="https://github.com/hupperts/bsky-feed-generator"
+FEEDGEN_HOSTNAME="postin.online"
 
 # Set this to the DID of the account you'll use to publish the feed
 # You can find your accounts DID by going to
