--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Whichever port you want to run this on 
-FEEDGEN_PORT=3000
+FEEDGEN_PORT=443
 
 # Change this to use a different bind address
-FEEDGEN_LISTENHOST="localhost"
+FEEDGEN_LISTENHOST="161.35.51.235"
 
 # Set to something like db.sqlite to store persistently
 FEEDGEN_SQLITE_LOCATION="db.sqlite"
